--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "url-metadata": "^5.2.1",
+    "youtube-transcript": "^1.2.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
